--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -141,22 +141,23 @@ body{
 }
 
 /*우측사이드창 - best hot*/
-#head-page-best, #head-page-hot{
+#head-page-best, #head-page-notice{
 	width:calc(43.24vw - 140px);
 	min-width:320px;
 	height:250px;
 }
-#head-page-best-title, #head-page-hot-title{
+#head-page-best-title, #head-page-notice-title{
 	height:40px;
 	text-align:center;
 	font-size:20px;
 	color:#fff;
 }
-#head-page-best-title strong, #head-page-hot-title strong{
+#head-page-best-title strong, #head-page-notice-title strong{
 	line-height:40px;
 }
 
-#head-page-best-list-frame, #head-page-hot-list-frame{
+/*best*/
+#head-page-best-list-frame{
 	width:320px;
 	min-width:320px;
 	list-style: none;
@@ -171,11 +172,8 @@ body{
 #head-page-best-list-frame::-webkit-scrollbar { 
     display: none !important; 
 } 
-#head-page-hot-list-frame::-webkit-scrollbar { 
-    display: none !important;
-} 
 
-#head-page-best-list, #head-page-hot-list{
+#head-page-best-list{
 	list-style: none;
 	display:flex;
 	align-items: center;		/*상하정렬*/
@@ -184,11 +182,11 @@ body{
 	padding:0;
 }
 
-.head-page-best-item, .head-page-hot-list{
+.head-page-best-item{
 	height:180px; /*215*/
 	width: 320px; /*298*/
-
 }
+
 .head-page-link{
 	position:relative;
 	height:180px; 
@@ -201,7 +199,9 @@ body{
 	height:180px;
 	width: 320px;
 	object-fit: cover;
+	filter: brightness(0.8);
 }
+
 .head-page-cont{
 	position:absolute;
 	display:inline;
@@ -209,19 +209,51 @@ body{
 	width:320px;
 	left: 50%;
 	transform: translate(-50%);
-	padding-top:50px;
-	bottom:0;
+	padding-top:40px;
+	bottom:10px;
 }
+
+.head-page-main-title-wrap{
+	display: table-cell;
+    vertical-align: middle;
+    height:62px;
+    line-height: 31px;
+}
+
 .head-page-cont strong{
-	display:block;
+	width:300px;
+	padding:0 10px;
+	font-family: 'NanumMyeongjo','serif';
 	text-align:center;
-	font-size:27px;
+	font-size:23px;
+    overflow: hidden;		/*내용이 넘어가면 숨김*/
+	white-space: normal;	/*줄바꿈 처리 : width넘어가면 엔터처리*/ 
+	word-wrap: break-word;	/*엔터처리시에 단어단위로 끊어서 사용-현재적용안됨..*/
+	text-overflow: ellipsis;/*문자 over되는거 ...처리*/
+	display: -webkit-box; 
+	-webkit-line-clamp: 2; /* 라인수 */ 
+	-webkit-box-orient: vertical;
 }
-.head-page-cont span{
-	margin-top:8px;
+
+.head-page-sub-title{
+	margin-top: 13px;
+	font-size:14px;
+	text-align:center;
+	height:19px;
+	line-height:19px;
+	overflow: hidden;		/*내용이 넘어가면 숨김*/
+	white-space: normal;	/*줄바꿈 처리 : width넘어가면 엔터처리*/ 
+	word-wrap: break-word;	/*엔터처리시에 단어단위로 끊어서 사용-현재적용안됨..*/
+	text-overflow: ellipsis;/*문자 over되는거 ...처리*/
+	display: -webkit-box; 
+	-webkit-line-clamp: 1; /* 라인수 */ 
+	-webkit-box-orient: vertical;
+}
+.head-page-author{
+	font-size: 13px;
+	margin-top: 15px;
 	display:block;
 	text-align:center;
-	
 }
 
 .head-item-scroll{
@@ -248,6 +280,113 @@ body{
 	border-radius: 100%;
 	margin:10px 10px;
 }
+.head-item-scroll-item .head-checked{
+	background-color:#f79482;
+}
+
+/*notice*/
+#head-page-notice-list-frame{
+	width:320px;
+	min-width:320px;
+	display:flex;
+	height:180px;
+	padding:0;
+	margin:0 auto;
+}
+
+#head-page-notice-list{
+	font-size:14px;
+	color:#fff;
+	list-style: none;
+	padding:0;
+	margin:0;
+}
+
+.head-page-notice-item{
+	border-bottom:0.5px dotted #fff;
+	width:320px;
+	height:36px;
+	display:flex;
+}
+
+.head-page-notice-item:nth-child(5){
+	border-bottom:none;
+}
+
+.head-page-notice-item a{
+	width:320px;
+	height:34px;
+	padding:1px 0;
+	display: inherit;	
+}
+
+.head-page-notice-item a:hover{
+ 	color:#FBA621;
+ 	font-weight:bold;
+}	
+.head-page-notice-title{
+	text-align:left;
+	width:200px;
+	padding-left:20px;
+	height:36px;
+	line-height:36px;
+}
+.head-page-notice-date{
+	text-align:right;
+	width:100px;
+	height:36px;
+	line-height:36px;
+}
+
+
+/*우측사이드창 - category*/
+#head-page-category-frame{
+	width:calc(56.76vw - 180px);
+	min-width:376px;
+	height:480px;
+	margin:10px 20px;
+	display:flex;
+	justify-content: center;
+	align-items: center;
+}
+#head-page-category-list{
+	list-style: none;
+	display:flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap:wrap;
+	margin:0;
+	padding:0 calc(3.1vw - 23px);
+}
+.head-page-category-item{
+	width: calc(7.55vw - 10px);
+	height: calc(7.55vw - 10px);
+	min-width: 67px;
+	min-height: 67px;
+	margin:2.5px;
+	display:flex;
+	justify-content: center;
+	align-items: center;
+}
+.head-page-category-item a{
+	background-color:#fff;
+	width: calc(7.55vw - 10px);
+	height: calc(7.55vw - 10px);
+	min-width: 67px;
+	min-height: 67px;
+	cursor:pointer;
+	display:inline-block;
+	line-height:calc(7.55vw - 10px);
+	text-decoration: none;
+	text-align: center;
+	color: #3d3d3d;
+	font-size: calc(8px + .5vw);
+}
+
+.head-page-category-item a:hover{
+	background-color: #f79482;
+}
+
 /*우측사이드창 - category*/
 #head-page-category-frame{
 	width:calc(56.76vw - 180px);
@@ -343,9 +482,10 @@ body{
 	
 }
 #head-profile-service-wrap{
-	height:270px;
+	height:269.5px;
 	width:200px;
 	margin-top:40px;
+	border-bottom: 0.5px solid #d4d4d4;
 }
 #head-profile-service-wrap ul{
 	list-style: none;
