--- a/src/main/webapp/resources/css/member_modify.css
+++ b/src/main/webapp/resources/css/member_modify.css
@@ -41,7 +41,7 @@
 	padding-left: 68px;	
 }
 .member_modify_text { /* 인풋박스 설정 */
-	width: 200px;
+	width: 270px;
 	height: 15px;
 	outline: 0;
 	border-left: none;
@@ -54,7 +54,7 @@
 }
 
 .member_modify_text.birth{
-	width: 40px;
+	width: 63px;
 	height: 15px;
 	outline: 0;
 	border-left: none;
@@ -68,7 +68,7 @@
 }
 
 .member_modify_text.tel{
-	width: 42px;
+	width: 64px;
 	height: 15px;
 	outline: 0;
 	border-left: none;
@@ -83,6 +83,20 @@
 	
 .member_modify_text.email{
 	width: 98px;
+	height: 15px;
+	outline: 0;
+	border-left: none;
+	border-right: none;
+	border-top: none;
+	text-align: left;
+	padding:0 10px;
+	border-bottom:1px solid orange;
+	padding-bottom:5px;
+	font-size : 14px;
+	font-family: verdana;
+}
+.member_modify_text.emailcheck{
+	width: 240px;
 	height: 15px;
 	outline: 0;
 	border-left: none;
@@ -126,18 +140,21 @@
 	margin-bottom: 5px;
 }
 
-/* 가져온 css */
-
+#member_modify_emailcheck_div{
+	display: inline;
+}
 
 
 #member_modify_emailcheck_btn{
-	border: solid 2px orange;
-	width: 200px;
-	height: 50px;
-	background-color: white;
-	cursor: pointer;
+	width: 25px;
+	height: 25px;
+	background-color: lightblack;
+	border: solid 2px lightblack;
 	outline: 0;
-	margin: 0px 300px;
+	border-radius: 100%;
+	cursor: pointer;
+	margin-left:5px;
+	margin-bottom: 5px;
 }
 
 #member_modify_next_btn_div{
@@ -164,4 +181,21 @@
 	height: 15px;
 	padding:5px;
 	color: #ff0000;
+}
+
+/*로딩화면을 위한 css*/
+.wrap-loading{ /*화면 전체를 어둡게 합니다.*/
+    position: fixed;
+    left:0;
+    right:0;
+    top:0;
+    bottom:0;
+    background: rgba(0,0,0,0.8);
+}
+.wrap-loading div{ /*로딩 이미지*/
+    position: fixed;
+    top:50%;
+    left:50%;
+    margin-left: -21px;
+    margin-top: -21px;
 }
