<작가신청> 1. 작가신청할 때 세션유효성 검증 추가 2. 사용자 작가신청 유효성 검증 추가, 수정불가 고지 후 전송하도록 수정 3. 관리자페이지 리스트, 페이징, 검색 구현 4. 작가신청 처리현황과 처리날짜를 저장하기 위해 테이블에 컬럼 추가 했음.

--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -203,7 +203,6 @@ a:hover{text-decoration:underline; color:#F57C68;}
 }
 
 .list_underline {
-	
 	padding: .5em .2em;
 }
 
@@ -434,3 +433,40 @@ a:hover{text-decoration:underline; color:#F57C68;}
 	padding:5px;
 }
 
+/* admin_author 작가신청 리스트 */
+#adm_author_wrap {
+	display: flex;
+    justify-content: center;
+    min-height: 400px;
+    width: 800px;
+    margin: 0 auto;
+}
+
+.adm_author_count {
+	padding-bottom:10px;
+}
+
+#adm_aut_table {
+    font-size: 12px;
+    width: 800px;
+    border-collapse:collapse;
+}
+
+#adm_aut_table td{
+	overflow:hidden;
+	white-space : nowrap;
+	text-overflow: ellipsis;
+}
+
+.list_underline {
+	padding: .5em .2em;
+}
+
+#paging {
+	padding: 1em .2em;
+}
+
+
+#search_name {
+	margin: 0 7px;
+}
