트러블슈팅중 - 헤더에 <a>태그에 color가 바뀌는 부분 수정 - 공지사항 href 수정 - 공지사항에 작성자 추가

--- a/src/main/webapp/resources/css/notice.css
+++ b/src/main/webapp/resources/css/notice.css
@@ -4,10 +4,10 @@
 /* main_notice (공지사항) */
 
 body {margin:0;	padding:0;}
-a:link{text-decoration:none; color:gray;}
+a:link{text-decoration:none;}
 a:active{text-decoration:none;}
 a:visited{text-decoration:none;}
-a:hover{text-decoration:underline; color:#F57C68;}
+a:hover{text-decoration:underline;}
 
 .clear {
 	clear:both;
