카테고리 페이지 UI수정, 읽기 페이지 등록정보, 조회수 상승 기능 추가( 추후 뷰페이지 적용 ), 읽기페이지 타이틀 중앙, 아래 분기문과 썸네일과 배경색상 설정 위해 테이블 컬럼수정(bo_titlespace, bo_color 컬럼생성), 읽기페이지, 쓰기페이지 자잘한 UI수정 BoardVO 새로 생성된 컬럼 get,set 추가

--- a/src/main/webapp/resources/css/read.css
+++ b/src/main/webapp/resources/css/read.css
@@ -28,10 +28,36 @@ body a {
 	background-size:cover;
 	filter:brightness(0.7);
 }
-
+.write_article_info_bottom{
+	font-size:12px;
+	transform:translateY(30px);
+}
+.write_article_info_center{
+	font-size:12px;
+	transform:translateY(140px);
+}
+.write_article_by{
+	font-style:italic;
+	opacity:0.5;
+	margin-right:3px;
+}
+.write_article_author{
+	font-weight:bold;
+	opacity:0.7;
+}
+.write_article_icon{
+	opacity:0.5;
+}
+.write_article_date{
+	opacity:0.7;
+}
 #write_title_area_bg #write_title_parent_center {
 	color:white;
 	top:100%;
+}
+#write_title_parent_bottom{
+	transform:translate(50%,250%) !important;
+	-webkit-transform:translate(50%,250%) !important;
 }
 
 /*배경*/
