--- a/src/main/webapp/resources/css/category.css
+++ b/src/main/webapp/resources/css/category.css
@@ -2,7 +2,7 @@
 /* Category.jsp */
 
 body{
-	background-color:snow;
+	background-color: #fbfbfb;
 }
 
 #cat_empty{
@@ -10,7 +10,7 @@ body{
 	height:auto;
 	text-align:center;
 	margin:0 auto;
-	background-color:snow;
+	background-color: #FBFBFB;
 	margin-bottom:100px;
 	margin-top: 37px;
 }
@@ -28,7 +28,7 @@ body{
 	margin-top: 10px;
 	margin-left: 359px;
 }
-cat_write_top{
+.cat_write_top{
 	text-decoration:none;
 }
 .cat_writer_a{
@@ -52,17 +52,14 @@ cat_write_top{
 	border-radius:50%;
 }
 .cat_writer_keyword{
-	width:35px;
-	height:16px;
+	height: 20px;
 	border-radius:25px;
 	background-color:transparent;
 	color:#3d3d3d;
-	border:1.5px solid #F57C68;
-	padding:4 10px;
-	font-size:3px;
+	border: 1px solid #F57C68;
+	font-size: 11px;
 	outline: none;
-    cursor: pointer;
-		
+	cursor: pointer;
 }
 .cat_writer_keyword_div{
 	margin-top:5px;
@@ -77,41 +74,26 @@ cat_write_top{
 	margin-bottom: 100px;
 }
 #cat_writer_title{
-
-height: 42px;
-
-width:921px;
-
-font-size:24px;
-
-text-align:left;
-
-margin:0px auto;
-
-vertical-align:middle;
-
-color:#ffffff;
-
-text-decoration:none;
-
-background-color:#F57C68;
-
-border:0px;
-
-align:center;
-
-padding-left:20px;
-
-margin-top: 5px;
-
-/* padding-top: 20px; */
-
-line-height: 42px;
+	height: 42px;
+	width:921px;
+	font-size:24px;
+	text-align:left;
+	margin:0px auto;
+	vertical-align:middle;
+	color:#ffffff;
+	text-decoration:none;
+	background-color:#F57C68;
+	border:0px;
+	align:center;
+	padding-left:20px;
+	margin-top: 5px;
+	line-height: 42px;
 }	
 #cat_writer_list{
 	display:flex;
 	justify-content:space-between;
 	text-decoration:none;
+	text-align: center;
 }
 #cat_write_count1{
 	margin-top:10px;
@@ -120,8 +102,8 @@ line-height: 42px;
 	color:#333;
 	text-decoration:none;
 	font-size:12px;
-	text-align:left;
-	margin-left:30px;
+	text-align: center;
+	margin: 10px auto 0px auto;
 }
 #cat_sub_count1{
 	width:120px;
@@ -133,15 +115,14 @@ line-height: 42px;
 	margin-left:30px;
 }
 #cat_writer_list1{
-	width:150px;
+	background-color: #FFF;
+	width: 220px;
 	height:190px;
-	margin:20px 15px 10px 15px;
+	margin: 10px 5px;
 	border:1px solid #FBA621;
-	justify-content:center;	
+	justify-content:center;
 	text-decoration: none;
-	margin-bottom:5px;
-    margin-left: 0px;
-
+	margin-left: px;
 }
 .cat_writing_block{
 	width:940px;
@@ -153,11 +134,12 @@ line-height: 42px;
 	margin-bottom:60px;
 }
 .cat_writing{
-	width:500px;
-	height:300px;	
+	width: 500px;
+	height:300px;
 	justify-content:center;
-	margin:0px auto;
+	margin: 0px auto;
 	position:relative;
+	background-color: #FFF;
 }
 .cat_writing_img_div{
 	position:absolute;
@@ -178,6 +160,7 @@ line-height: 42px;
 	position:absolute;
 	top:0;
 	z-index:2;
+	word-break:break-all;
 }
 .cat_write_title{
 	color:#efefef;
@@ -200,71 +183,25 @@ line-height: 42px;
 	top:0;
 }
 .cat_writing_button{
-	width:70px;
 	height:28px;
 	border-radius:25px;
-	position:absolute;
 	z-index:3;
-	right:315px;
 	background-color:transparent;
 	color:#efefef;
 	border:1.5px solid #F57C68;
 	padding:4px 10px;
-	margin-top:20px;
+	margin-top:15px;
 	cursor:pointer;
 	
 }
 .cat_writing_button:focus{
 	outline:none;
 }
+.cat_writing_button:active{
+	background-color:#F57C68;
+}
 .cat_writing_button b{
 	line-height:18px;
-}
-.cat_writing_button2{
-	width:70px;
-	height:28px;
-	border-radius:25px;
-	position:absolute;
-	z-index:3;
-	right:215px;
-	background-color:transparent;
-	color:#efefef;
-	border:1.5px solid #F57C68;
-	padding:4 10px;
-	margin-top:20px;
-	cursor:pointer;
-}
-.cat_writing_button2:focus{
-	outline:none;	
-}
-.cat_writing_button2 b{
-	line-height:18px;
-}
-.cat_writing_button3{
-	width:70px;
-	height:28px;
-	border-radius:25px;
-	position:absolute;
-	z-index:3;
-	right:115px;
-	background-color:transparent;
-	color:#efefef;
-	border:1.5px solid #F57C68;
-	padding:4 10px;
-	margin-top:20px;
-	cursor:pointer;
-}
-.cat_writing_button3:focus{
-	outline:none;	
-}	
-.cat_writing_button3 b{
-	line-height:18px;
-}
-#cat_writing_button:focus{
-	outline:none;
-}
-#cat_writing_button2:focus{
-	outline:none;
 }
 #cat_writing_button:focus{
 	outline:none;
@@ -276,8 +213,9 @@ line-height: 42px;
 	margin: 15px 3px 5px 0px;
 	outline: none;
 	border: 1px solid orange;
+	border-bottom:none;
 	border-radius: 15px 15px 0px 0px;
-	background-color: #ffdfbf;
+	background-color: rgb(255, 250, 250);
 	cursor: pointer;
 	float: left;
 }
@@ -288,6 +226,7 @@ line-height: 42px;
 	margin: 15px 0px 5px 5px;
 	outline: none;
 	border: 1px solid orange;
+	border-bottom:none;
 	border-radius: 15px 15px 0px 0px;
 	background-color: #ffdfbf;
 	cursor: pointer;
@@ -329,8 +268,8 @@ line-height: 42px;
     color:#FFF;
     width:100%;
     display:inline-block;
-    margin-top:15px;
     text-align:center;
+    transform:translateY(50px);
 }
 .cat_book_inner{
 	width:150px;
