jsp파일 들어오는 값에 따라 다르게 보이게 수정 (로그인,비로그인 및 작가 비작가 구분) css 조금 조정 controller 글내용 나오도록 수정해야함.

--- a/src/main/webapp/resources/css/profile.css
+++ b/src/main/webapp/resources/css/profile.css
@@ -112,12 +112,21 @@ margin: -5px 10px 15px 0;
 	font-weight: bold;
 	color:  #ff8040;
 }
-.article_cont{
-	    font-size: 14px;
-    line-height: 1.5;
-        padding-right: 15px;
-    
+.pf_bo_title{
+    opacity: 0.7;
+    color: #333;
 }
+.article_cont{
+	font-size: 14px;
+    line-height: 1.5;
+    color: #333;
+    font-style: normal;
+}
+.article_cont p{
+	padding: 0 0 0 15px;
+	
+}
+
 
 /*	profile 	*/
 #profile_main{
