--- a/src/main/webapp/resources/css/find_id.css
+++ b/src/main/webapp/resources/css/find_id.css
@@ -6,62 +6,75 @@ body{
 	padding: 0px;
 }
 #find_id_main_wrap{
-	background-image: url(../img/background_img/login_pattern1.png);
-    background-size: cover;
-	background-repeat: no-repeat;
-	padding: calc((100vh - 530px) / 2) 0;
+	background-color: #f5f5f5;;
 }
 #find_id_main_div{
 	background-color:white;
-	width:400px;
-	height:530px;
+	width:300px;
+	height:689px;
 	margin: 0px auto;
 	text-align: center;
-}
-#find_id_sub_div{
-	background-color:white;
-	width:310px;
-	height: 150px;
-	margin: 0px auto;
-	margin-top: 30px;
-	text-align: center;
+	padding: 60px 40px 0 40px;
 }
 
 #find_id_img_logo{
-	margin: 40px 0px;
+	margin-top:50px;
+	width: 230px;
+	height: 90px;
+	margin-bottom: 40px;
 }
-
-.find_pass_error{
+#find_id_btn_box a{
+display: inline-block;
+    border-top: 1px solid #f1f1f1;
+    border-right: 1px solid #f1f1f1;
+    width: 40%;
+    height: 40px;
+    line-height: 40px;
+    background: #f1f1f1;
+    color: #aaa;
+    text-align: center;
+    font-size: 13px;
+    cursor: pointer;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+#find_id_sub_box_id{
+	margin-top: 30px;
+}
+.find_id_text{
+	width: 220px;
+    height: 30px;
+    padding-left: 20px;
+    padding-bottom: 5px;
+    /* padding: 20px; */
+    outline: 0;
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    font-size: 14px;
+}
+.find_id_text1{
+	width: 85px;
+    height: 30px;
+    padding-left: 20px;
+    padding-bottom: 5px;
+    /* padding: 20px; */
+    outline: 0;
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    font-size: 14px;
+}
+.find_id_error{
 	width:250px;
 	height:20px;
 	line-height:20px;
 	padding-left:37px;
 	margin:5px;
 	color:#ff0000;
-	font-size:12px;
-	
-}
-#find_id_name_email{
-	margin-top: 20px;
+	font-size:12px;	
 }
 
-.find_id_text{
-	width: 250px;
-	height: 30px;
-	padding-left: 20px;
-	padding-bottom: 5px;
-	outline: 0;
-	border-left: none;
-	border-right: none;
-	border-top: none;
-	font-size: 20px;
-}
-.find_id_text:hover{
-	border-bottom: 2px solid orange;
-}
-.find_id_text:focus{
-	border-bottom: 2px solid orange;
-}
 #find_id_label{
 	font-size: 25px;
 	margin-bottom: 10px;
@@ -77,23 +90,51 @@ body{
 .find_id_name_email_color :focus{
 	border-bottom: 2px solid orange;
 }
-#find_id_lastbtn{
-	width: 150px;
-	height: 50px;
-	font-size:1rem;
-	margin-top:10px;
-	background-color:white;
-	border:solid 2px orange;
-	outline: 0;
-	cursor: pointer;
-	color:gray;
+#find_id_btn{
+	width: 240px;
+    height: 50px;
+    font-size: 1rem;
+    margin-top: 10px;
+    background-color: black;
+    /* border: solid 2px orange; */
+    border: none;
+    color: white;
+    outline: 0;
+    cursor: pointer;
+    color: white;
+}
+/*로딩화면을 위한 css*/
+.wrap-loading{ /*화면 전체를 어둡게 합니다.*/
+    position: fixed;
+    left:0;
+    right:0;
+    top:0;
+    bottom:0;
+    background: rgba(0,0,0,0.8);
+}
+.wrap-loading div{ /*로딩 이미지*/
+    position: fixed;
+    top:50%;
+    left:50%;
+    margin-left: -21px;
+    margin-top: -21px;
+}
+
+/* 비밀번호 페이지*/
+
+#find_id_sub_box_pass{
+	display: none;
 }
 
 
-#find_id_lastbtn:hover{
-	background-color: orange;
-	color:white;
-}
+
+
+
+
+
+
+
+
 
 
 
