사용자단 공지사항 끝 1. 공지사항 내용보기 페이지 UI 및 연결 완료 2. 메뉴에서 공지사항 눌렀을때 새로 팝업되게 구현(목록으로 이동시 원래 페이지에서 이동) 3. 앞으로 해야할 것 : 조회수 hit 작업(늘어나는것 + header에 조회수 보여주기)
메인페이지 수정
1. 사이트 이용방법 링크 footer에서 제거
2. 메뉴에 프로필에있는 중앙 hr 파 margin 조정
3. 다른페이지에서 a 태그 설정 깨지는것 막음
4. 의문
왜 하늘이 페이지에서만 메뉴바가 깨질까...

--- a/src/main/webapp/resources/css/notice.css
+++ b/src/main/webapp/resources/css/notice.css
@@ -86,7 +86,12 @@ a:hover{text-decoration:underline;}
 	margin:0 auto;
 }
 
-
+#notice_paging a{
+	color: #808080;
+}
+#notice_paging a:hover{
+	text-decoration:none;
+}
 #search_name {
 	margin: 0 7px;
 }
@@ -181,3 +186,93 @@ a:hover{text-decoration:underline;}
 .search_field {
 	margin: 0 5px;
 }
+
+/*notice_cont.jsp*/
+/*공지사항 내용보기 페이지*/
+.notice_cont_page_wrap{
+	min-height: calc(100vh - 162px);
+	width:100%;
+	color: #3d3d3d;
+	background-color: #f7f7f7;
+}
+
+#notice_cont_page_container{
+	width:900px;
+	margin:0 auto;
+	min-height:595px;
+	background-color: #fff;
+}
+
+#notice_cont_page_title{
+	margin:0 auto;
+	text-align: center;
+}
+#notice_cont_page_title h3{
+	margin: 0;
+    margin-bottom: 15px;
+    font-size: 37px;
+    font-family: 'NanumMyeongjo','serif';
+}
+
+.notice_cont_body{
+	min-height:538px;
+}
+
+.notice_cont_head{
+	display: flex;
+	width:680px;
+    padding: 10px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    border-bottom: 0.5px solid #dfdfdf;
+    justify-content: space-between;
+}
+
+.notice_cont_writer{
+	font-size: 13px;
+    color: #656565;
+}
+.notice_cont_writer span{
+    display: inline-block;
+    width: 135px;
+}
+.notice_cont_title{
+	
+}
+
+.notice_cont_date{
+	font-size: 13px;
+    color: #656565;
+}
+
+.notice_cont_date span{
+    display: inline-block;
+    width: 135px;		
+}
+
+.notice_cont_cont{
+	width: 650px;
+    line-height: 28px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+}
+
+.notice_cont_footer{
+	width:650px;
+	margin:0 auto;
+	text-align: right;
+	margin-bottom:20px;
+}
+/*notice_cont(pop)*/
+/*공지사항 팝업버전*/
+#notice_cont_pop_container{
+	width:700px;
+	margin:0 auto;
+	min-height:500px;
+	background-color: #fff;
+}
+
+.notice_cont_pop_body{
+	min-height:500px;
+}
+
