--- a/src/main/webapp/resources/css/m.css
+++ b/src/main/webapp/resources/css/m.css
@@ -318,7 +318,8 @@ body{
 	width:320px;
 	height:34px;
 	padding:1px 0;
-	display: inherit;	
+	display: inherit;
+	text-decoration: none;	
 }
 
 .head-page-notice-item a:hover{
@@ -492,7 +493,7 @@ body{
 
 #head-profile-service-hr{ /*프로필 중앙선 li*/
 	padding:10px 0;
-	margin:30px 20px !important;
+	margin:20px 20px !important;
 }
 
 .head-profile-service-bar{
@@ -927,6 +928,7 @@ body{
 /*footer 메뉴와 링크포함된 div*/
 #foot-inner-right{
 	margin-top:12px;
+	width:581px;
 }
 
 /*footer 메뉴*/
@@ -937,6 +939,7 @@ body{
 	list-style: none;
 	padding:0;
 	margin:0;
+	justify-content: flex-end;
 }
 .foot-inner-menu-item{
 	margin-right:20px;
