--- a/src/main/webapp/resources/css/pass_modify.css
+++ b/src/main/webapp/resources/css/pass_modify.css
@@ -5,20 +5,19 @@ body{
 	padding: 0px;
 }
 #pass_modify_main_wrap{
-	padding: calc((100vh - 702px) / 2) 0;
-   	background-image: url(../img/background_img/login_pattern2.jpg);
+	    padding: calc((100vh - 681px) / 1) 0;
+    background-image: url(../img/background_img/login_page.png);
     background-size: cover;
 }
 #pass_modify_main_div{
-	background-color:white;
-	width:400px;
-	margin: 0px auto;
-	height:540px;
-	text-align: center;
+    background-color: white;
+    width: 320px;
+    margin: 0px auto;
+    height: 450px;
+    text-align: center;
 	
 }
 #pass_modify_sub_div{
-	/* border:solid 1px red; */
 	background-color:white;
 	width:310px;
 	height: 200px;
@@ -28,32 +27,25 @@ body{
 	
 }
 
-#pass_modify_label{
-	
-	font-size: 20px;
-	color:gray;
-	border-bottom: 1px solid gray;
-	padding-bottom: 5px;
-}
 #pass_modify_img_logo{
 	margin-top: 50px;
 	margin-bottom: 20px;
+	width: 200px;
 }
 #pass_modify_id{
 	cursor: default;
 	pointer-event:none;
 }
 .pass_modify_text{
-	
-	width: 230px;
-	height: 30px;
-	font-size:20px;
-	padding-left: 20px;
-	padding-bottom: 5px;
-	outline: 0;
-	border-left: none;
-	border-right: none;
-	border-top: none;
+    width: 180px;
+    height: 20px;
+    font-size: 15px;
+    padding-left: 15px;
+    padding-bottom: 5px;
+    outline: 0;
+    border-left: none;
+    border-right: none;
+    border-top: none;
 }
 
 #pass_modify_pass:hover{
@@ -72,15 +64,15 @@ body{
 	padding-left: 50px;
 }
 #pass_modify_lastbtn{
-	width: 150px;
-	height: 50px;
-	font-size:1rem;
-	background-color:white;
-	border:solid 2px orange;
-	outline: 0;
-	color:gray;
-	margin-top: 10px; 
-	cursor: pointer;
+width: 190px;
+    height: 35px;
+    font-size: 14px;
+    background-color: white;
+    border: solid 2px orange;
+    outline: 0;
+    color: gray;
+    /* margin-top: 10px; */
+    cursor: pointer;
 }
 #pass_modify_lastbtn:hover{
 	background-color: orange;
