20191218 1.내정보 페이지에서 카테고리가 선택되어진 상태로 페이지 로딩되도록 구현 - 기술적으로 미숙한 부분이 있어 생각나면 수정해야됨 2.글읽기 페이지에 html을 text로 변환 3.기타 글읽기에서 header에 나타나는 UI들 수정

--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -118,10 +118,25 @@ body{
     padding: 0;
     align-items: center;
 }
+.head-menu-sym-div{
+	display:flex;
+	border: none;
+    outline: none;
+    height: 30px;
+    background-color: rgb(255,255,255);
+    padding: 0;
+    align-items: center;
+}
 
 .head-menu-heart-img{
 	cursor: pointer;
     width: 23px;
+    height: 23px;
+    background-color: rgb(255,255,255);
+}
+
+.head-menu-heart-img-disabled{
+	width: 23px;
     height: 23px;
     background-color: rgb(255,255,255);
 }
