--- a/src/main/webapp/resources/css/joinmembership.css
+++ b/src/main/webapp/resources/css/joinmembership.css
@@ -36,7 +36,7 @@ body{
 #join_membership_img_logo a{
 	width: 200px;
 	height: 75px;
-	margin-top: 50px;
+	margin-top: 35px;
 	margin-left: 100px;
 }
 
@@ -50,7 +50,7 @@ body{
 	justify-content: flex-end;
 	align-items: flex-end;
 	width:440px;
-	height:129px;
+	height:114px;
 	margin-right:100px;
 	
 }
@@ -284,6 +284,26 @@ body{
 	color:white;
 }
 
+.join_membership_policy_box{
+	display: flex;
+    align-items: center;
+    width: 626px;
+    height: 20px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+
+#join_membership_check{
+	-webkit-transform: scale(1.3);
+	transform: scale(1.3);
+	margin: 0;
+}
+
+#join_membership_check_comment{
+	font-size:13px;
+	margin-left: 10px;
+}
+
 #join_membership_next_btn{
 	border: solid 2px orange;
 	width: 200px;
@@ -309,6 +329,11 @@ body{
     text-align: left;
     margin-top: 5px;
     margin-bottom: 15px;
+}
+
+#join_membership_policy_error{
+	width:auto;
+    margin:0px;
 }
 
 /*---------------프로필 설정----------------*/
